Update 'Always Show Bookmarks' checkmark visibility when toggled on New Tab Page

In MacViews mode, the 'Always Show Bookmarks' menu item is always checked
regardless of whether the bookmark bar is detached or attached. In Cocoa
mode, this was not an issue because the visibility state is determined by the
bookmark preference value for 'kShowBookmarkBar', which stores whether the
'Always Show Bookmarks' option is checked. In MacViews mode, the visibility
state always returns 'true' because it calls IsBookmarkBarVisible() instead,
which is 'true' if the bookmark bar is in a detached state (on New Tab Page).

Add contact info to AUTHORS


Update 'Always Show Bookmarks' checkmark visibility when toggled on New Tab Page

R=bsep@chromium.org, sky@chromium.org

Bug: 854962
Change-Id: I19f3741cd720474642d0661192f92f4517da075c
Reviewed-on: https://chromium-review.googlesource.com/1123890
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Reviewed-by: Sidney San Martín <sdy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572236}
Former-commit-id: 1f42285a00e836ecd0ddde8cb0624c7bb2bed162